--- a/package.json
+++ b/package.json
@@ -3,19 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@firebase/app": "^0.7.11",
-    "@firebase/auth": "^0.19.4",
+    "@firebase/app": "0.6.22",
+    "@firebase/auth": "0.16.6",
     "@firebase/firestore": "^3.4.1",
     "@material-ui/core": "^4.12.3",
     "@react-firebase/auth": "^0.2.10",
-    "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/react": "^12.1.2",
-    "@testing-library/user-event": "^13.5.0",
-    "firebase": "^9.6.1",
+    "lodash": "4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "5.0.0",
-    "web-vitals": "^2.1.3"
+    "react-scripts": "5.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
