--- a/manifest.json
+++ b/manifest.json
@@ -11,5 +11,5 @@
     "browser_action": {
         "default_popup": "popup.html"
        },
-    "options_page": "test.html"
+    "options_page": "homepage.html"
 }
