--- a/manifest.json
+++ b/manifest.json
@@ -11,5 +11,6 @@
     "browser_action": {
         "default_popup": "popup.html"
        },
-    "options_page": "homepage.html"
+    "options_page": "homepage.html",
+    "homepage_url": "http://localhost:3000/"
 }
