--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
   "dependencies": {
     "@firebase/app": "0.6.22",
     "@firebase/auth": "0.16.6",
-    "@firebase/firestore": "3.4.1",
+    "@firebase/firestore": "2.3.1",
     "@material-ui/core": "^4.12.3",
     "@react-firebase/auth": "0.2.10",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
-    "bootstrap": "^5.1.3",
+    "bootstrap": "5.1.3",
     "react": "^17.0.2",
     "react-bootstrap": "2.1.0",
     "react-dom": "^17.0.2",
